🐌🍃 Checkpoint ./client/maintenance.html:51974198/826

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -44,16 +44,8 @@
     <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff"
       >Discord server</a
     >
-    while you wait, or watch this video:)<br /><center>
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube-nocookie.com/embed/0FrJCYT7Q9k?si=TLpBgYEVQUCkYqoR&amp;controls=0&amp;start=81"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe></center>
+    while you wait, or have an message for all who want the site to be up immediately:)<br /><center>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bcIMZ4FJ6dE?si=UfwNrQznnNrbyFHY&amp;start=11" title="I DON'T GIVE A SHET 🔥🔥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
   </small>
   <script>
     document.addEventListener("mousedown", () => {
