🛍🎅 Checkpoint ./client/index.html:51974198/1160 ./.glitch-assets:51974198/1754 ./client/manifest.webmanifest:51974198/115

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
 <title>Dimka's TextWall</title>
-<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image%20(3).png?v=1705305911443">
-<link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
+<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image%20(3).png">
+<link rel="apple-touch-icon" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-iphone-60x60.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-ipad-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-iphone-retina-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-ipad-retina-152x152.png">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor, but better.">
 <meta id="theme-colour" name="theme-color" content="#222222">
