🌊🌷 Checkpoint ./client/static/textwall.js:51548543/68:51974198/83 ./client/index.html:51548543/23:51974198/312

--- a/client/index.html
+++ b/client/index.html
@@ -186,7 +186,15 @@
         ws.close();
         console.warn("Disconnected! (through debug menu)");
     }
-    </script>
+    </script><br />
+    <button onclick="ping()">
+      Ping
+    </button>
+    <script>
+    function ping() {
+        ws.send(new Uint8Array(1));
+        console.log("Manual ping (debug)");
+    }</script>
   </div>
 <div id="admin">
 <h3>Admin</h3>
