👚⭐️ Checkpoint ./client/index.html:51548543/55 ./server.js:51548543/554:51974198/54 ./client/static/textwall.js:51548543/46

--- a/client/index.html
+++ b/client/index.html
@@ -204,7 +204,7 @@
 <label>Login to type?</label><input id="l" type="checkbox"><br>
 <input type="text" id="t"><br>
 <input id="refresh" value="Refresh" type="button"><br>
-<textarea id="alerttext"></textarea><br>
+<textarea id="alerttext" placeholder="Announce a thing"></textarea><br>
 <input id="sendalert" value="Send" type="button"><br>
 <input id="reload" value="Reload" type="button"><br>
 <input type="text" id="deletename"><input type="button" id="delete" value="❌"><br>
