👘⏳ Checkpoint ./.glitch-assets:51974198/905 ./client/maintenance.html:51974198/1403

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -38,15 +38,16 @@
   <span>We're making new things...</span><br />
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
-  ></audio>
+  ></audio><center>
   <small>
     (You can join the
     <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff"
       >Discord server</a
     >
-    while you wait, or have an message from Dimka: )<br /><center>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bcIMZ4FJ6dE?si=UfwNrQznnNrbyFHY&amp;start=11" title="I DON'T GIVE A SHET 🔥🔥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
-  </small>
+    while you wait...<br> or have an message about site finally going up.)<br /><center>
+<video width="700" height="400" controls>
+    <source src="https://cdn.glitch.me/2c724c57-2f3d-4ea6-b456-e15fa098a60e/no shet given"></video></center>
+  </small></center>
   <script>
     document.addEventListener("mousedown", () => {
       var audio = document.querySelector("audio");
