🐗🏚 Checkpoint ./.glitch-assets:51548543/376 ./client/maintenance.html:51548543/393 ./server.js:51548543/6

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -46,7 +46,7 @@
     >
     while you wait...<br> or have an message about site finally going up.)<br /><center>
 <video width="700" height="400" controls>
-    <source src="https://cdn.glitch.me/2c724c57-2f3d-4ea6-b456-e15fa098a60e/no shet given"></video></center>
+    <source src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/no%20shet%20given.webm"></video></center>
   </small></center>
   <script>
     document.addEventListener("mousedown", () => {
@@ -57,8 +57,8 @@
     });
     console.log("Dimka's TextWall servers are shitting their diapers");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
-    setTimeout(function () {
-      location.href = "/";
+    setInterval(function () {
+      fetch("/").then(res => res.status == 200 && location.href = "/").catch(err => location.href = "/");
     }, 10000);
   </script>
 </body>
