--- a/client/index.html
+++ b/client/index.html
@@ -50,6 +50,16 @@
     <script src="/warning.js"></script>
   </head>
   <body>
+    <script> 
+var $buoop = {required:{e:-4,f:111,o:96,s:8,c:111},insecure:true,unsupported:true,api:2024.01 }; 
+function $buo_f(){ 
+ var e = document.createElement("script"); 
+ e.src = "//browser-update.org/update.min.js"; 
+ document.body.appendChild(e);
+};
+try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+catch(e){window.attachEvent("onload", $buo_f)}
+</script>
     <textarea id="clipboard"></textarea>
     <textarea
       id="textarea"
