⚓️🍨 Checkpoint ./client/static/textwall.js:51548543/149 ./client/index.html:51548543/2641

--- a/client/index.html
+++ b/client/index.html
@@ -51,15 +51,15 @@
   </head>
   <body>
     <script> 
-var $buoop = {required:{e:-4,f:111,o:96,s:8,c:111},insecure:true,unsupported:true,api:2024.01 }; 
-function $buo_f(){ 
- var e = document.createElement("script"); 
- e.src = "//browser-update.org/update.min.js"; 
- document.body.appendChild(e);
-};
-try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
-catch(e){window.attachEvent("onload", $buo_f)}
-</script>
+      var $buoop = {required:{e:-4,f:111,o:96,s:8,c:111},insecure:true,unsupported:true,style:"bottom",api:2024.01 }; 
+      function $buo_f(){ 
+        var e = document.createElement("script"); 
+        e.src = "//browser-update.org/update.min.js"; 
+        document.body.appendChild(e);
+      };
+      try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+      catch(e){window.attachEvent("onload", $buo_f)}
+    </script>
     <textarea id="clipboard"></textarea>
     <textarea
       id="textarea"
@@ -501,7 +501,6 @@ catch(e){window.attachEvent("onload", $buo_f)}
     <script src="/static/colors.js"></script>
     <script src="/static/pep.min.js"></script>
     <script src="/static/textwall.js"></script>
-
     <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
