✋🚋 Checkpoint ./server.js:51548543/49:51974198/72 ./client/static/textwall.js:51548543/10 ./client/index.html:51548543/18

--- a/client/index.html
+++ b/client/index.html
@@ -402,7 +402,7 @@
         <div id="admin">
           <h3>Admin</h3>
           <p>Sorry, not sure what you're trying to find.</p>
-          <label>Login to type?</label><input id="l" type="checkbox" /><br />
+          <label>Login to type?</label><input id="l" type="checkbox" checked="false" /><br />
           <input type="text" id="t" /><br />
           <input id="refresh" value="Refresh" type="button" /><br />
           <textarea id="alerttext" placeholder="Announce a thing"></textarea
