😹🔮 Checkpoint ./index.html:51974198/210 ./chromeerror.html:51974198/237515 ./client/chromeerror.html:51974198/397 ./client/banscreen.html:51974198/697

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             maxlength="64"
             minlength="1"
           /><br />
-          <label for="password2">Password again</label><br />
+          <label for="password2">Confirm Password</label><br />
           <input
             id="password2"
             type="password"
@@ -276,7 +276,6 @@
               </fieldset>
             </form>
             <form id="changepassform">
-              <!-- e? -->
               <fieldset>
                 <legend>Change password</legend>
                 <input
@@ -315,10 +314,6 @@
                 />
               </fieldset>
             </form>
-            <label
-              >no... stop, dont delete your account unless "Dimka" wants you to
-              delete it</label
-            >
             <form id="delaccountform">
               <fieldset>
                 <legend>Delete account</legend>
