--- a/client/banscreen.html
+++ b/client/banscreen.html
@@ -6480,7 +6480,9 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
           <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="9">Banned from Site</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">You have been banned from Dimka's TextWall, Appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>.</p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">
+          You have been banned from Dimka's TextWall, Appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>.
+      <br>Ban reason: (falling1 pls insert an ban reason at line 6485 of banscreen.html)</p>
         <!--The suggestion list and error code are normally presented inline,
           in which case error-information-popup-* divs have no effect. When
           error-information-popup-container has the use-popup-container class, this
