--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           >Show chat</label
         ><br />
         <input id="disablecolour" type="checkbox" /><label for="disablecolour"
-          >Disable colour</label
+          >Disable color</label
         ><br />
         <input id="smoothpanning" type="checkbox" /><label for="smoothpanning"
           >Smooth panning</label
@@ -144,7 +144,7 @@
           >Smooth cursors</label
         ><br />
         <input id="copycolour" type="checkbox" /><label for="copycolour"
-          >Copy colours</label
+          >Copy colors</label
         ><br />
         <input id="copydecorations" type="checkbox" /><label
           for="copydecorations"
@@ -360,7 +360,7 @@
           ><br />
           <input id="walldisablecolour" type="checkbox" /><label
             for="walldisablecolour"
-            >Disable colour</label
+            >Disable color</label
           ><br />
           <input id="disablebraille" type="checkbox" /><label
             for="disablebraille"
@@ -463,8 +463,8 @@
         <div id="paste" title="Paste" class="infobtn">
           <img id="pasteico" alt="paste" src="/static/paste.svg" />
         </div>
-        <div id="openmenu" title="Colours" class="infobtn">
-          <img alt="colour" src="/static/palette.svg" />
+        <div id="openmenu" title="Colors" class="infobtn">
+          <img alt="color" src="/static/palette.svg" />
         </div>
         <div id="options" title="Options" class="infobtn">
           <img alt="options" src="/static/settings.svg" />
