--- a/public/banscreen.html
+++ b/public/banscreen.html
@@ -6481,8 +6481,9 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
         <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">
-          You have been banned from Dimka's TextWall, Appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>.
-      <br>Ban reason: (falling1 pls insert an ban reason at line 6485 of banscreen.html)</p>
+          You have been banned from Dimka's TextWall, Appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>.<br></p>
+      <p>
+        Ban reason: banreason</p>
         <!--The suggestion list and error code are normally presented inline,
           in which case error-information-popup-* divs have no effect. When
           error-information-popup-container has the use-popup-container class, this
