--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
         </form>
         <form id="register">
           <h3>Register</h3>
+          <label>Wanna sign up differently? </label><button onclick="">
+          Sign up with Discord
+          </button><br />
           <label for="username">Username</label><br />
           <input
             id="username"
