🐮🌅 Checkpoint ./index.html:51974198/410

--- a/index.html
+++ b/index.html
@@ -213,12 +213,11 @@
         <form id="register">
           <h3>Register</h3>
           <label>Wanna sign up differently? </label
-          ><button
+          ><a href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"><button
             type="button"
-            onclick="location.href = https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"
           >
             Sign up with Discord</button
-          ><br /><br />
+          ></a><br /><br />
           <label for="username">Username</label><br />
           <input
             id="username"
