💺🎅 Checkpoint ./public/authorized.html:51548543/65

--- a/public/authorized.html
+++ b/public/authorized.html
@@ -10,5 +10,8 @@
       Thank you for signing up for Dimka's TextWall. (with discord)
     </p>
     <a href="/">Go home</a>
-  </center></body>
+  </center>
+  <script>
+    self.postMessage(code);
+  </script></body>
 </html>
