🏊🏼🍖 Checkpoint ./public/authorized.html:51548543/135

--- a/public/authorized.html
+++ b/public/authorized.html
@@ -13,7 +13,7 @@
   </center>
   <script>
     self.onmessage = e => {
-      window.parent.postMessage(new URL(location).searchParams.get("code"));
+      e.source.postMessage({code: new URL(location).searchParams.get("code")}, e.origin);
     };
     window.parent.postMessage(new URL(location).searchParams.get("code"));
   </script></body>
