😎🐒 Checkpoint ./public/authorized.html:51974198/96

--- a/public/authorized.html
+++ b/public/authorized.html
@@ -7,7 +7,8 @@
       Authorized
     </h1>
     <p>
-      Thank you for signing up for Dimka's TextWall. (with discord)
+      Thank you for signing up for Dimka's TextWall. (with discord)<br />
+      <small>If you pressed cancel instead, nothing actually happened then.</small>
     </p>
     <a href="/">Go home</a>
   </center>
