👰🏄 Checkpoint ./server.js:51548543/3 ./index.html:51548543/70

--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
     <script src="/static/colors.js"></script>
     <script src="/static/pep.min.js"></script>
     <script src="/static/textwall.js"></script>
+    <script src="/static/discordlogin.js"></script>
     <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
