🏤🏨 Checkpoint ./index.html:51974198/333

--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
         </fieldset>
         <form id="login">
           <h3>Log in</h3>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"><button
+            type="button"
+          >
+            Login with Discord</button
+            ></a>
           <label for="loginname">Username</label><br />
           <input
             id="loginname"
