--- a/index.html
+++ b/index.html
@@ -191,11 +191,10 @@
         </fieldset>
         <form id="login">
           <h3>Log in</h3>
-          <a href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"><button
-            type="button"
-          >
-            Login with Discord</button
-            ></a>
+          <a
+            href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"
+            ><button type="button">Login with Discord</button></a
+          ><br />
           <label for="loginname">Username</label><br />
           <input
             id="loginname"
@@ -218,11 +217,7 @@
         <form id="register">
           <h3>Register</h3>
           <label>Wanna sign up differently? </label
-          ><a href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"><button
-            type="button"
-          >
-            Sign up with Discord</button
-          ></a><br /><br />
+          ><button type="button" onclick="discordLogin()">Sign up with Discord</button><br /><br />
           <label for="username">Username</label><br />
           <input
             id="username"
