--- a/index.html
+++ b/index.html
@@ -191,11 +191,10 @@
         </fieldset>
         <form id="login">
           <h3>Log in</h3>
-          <a
-            href="https://discord.com/api/oauth2/authorize?client_id=1201515886683619368&response_type=code&redirect_uri=https%3A%2F%2Fdimkatextwall.glitch.me%2Fauthorized.html&scope=identify"
-            ><button type="button">Login with Discord</button></a
+          <button type="button" onclick="discordLogin()">
+            Login with Discord</button
           ><br />
-          <label for="loginname">Username</label><br />
+          <label for="loginname">Username:</label><br />
           <input
             id="loginname"
             autocomplete="username"
@@ -216,8 +215,7 @@
         </form>
         <form id="register">
           <h3>Register</h3>
-          <label>Wanna sign up differently? </label
-          ><button type="button" onclick="discordLogin()">Sign up with Discord</button><br /><br />
+          <br />
           <label for="username">Username</label><br />
           <input
             id="username"
@@ -520,7 +518,7 @@
 		});
 		}*/
     </script>
-    <script>
+    <script defer>
       console.log("if you're seeing this, the html should have loaded");
     </script>
   </body>
