🌃⏱ Checkpoint ./public/authorized.html:51548543/655 ./public/static/discordlogin.js:51548543/453 ./index.html:51548543/421 ./server.js:51548543/522

--- a/public/authorized.html
+++ b/public/authorized.html
@@ -13,8 +13,9 @@
     <a href="/">Go home</a>
   </center>
   <script>
+    var searchParams = new URL(location).searchParams;
     self.onmessage = e => {
-      e.source.postMessage({code: new URL(location).searchParams.get("code")}, e.origin);
+      e.source.postMessage(Object.fromEntries(searchParams), e.origin);
     };
   </script></body>
 </html>
