--- a/index.html
+++ b/index.html
@@ -191,9 +191,17 @@
         </fieldset>
         <form id="login">
           <h3>Log in</h3>
-          <button type="button" onclick="discordLogin()">
+          <button type="button" onclick="discordLogin()" id="discordloginbtn">
             Login with Discord</button
-          ><br />
+          ><br /><div style="display: none" id="discordlogin">
+          <p>
+            Sign up with Discord
+          </p><br />
+          <label>Username:</label><br />
+          <input id="discordloginname" maxlength="24"><button>
+          Sign up
+          </button>
+          </div>
           <label for="loginname">Username:</label><br />
           <input
             id="loginname"
