🎥🏯 Checkpoint ./server.js:51548543/220 ./index.html:51548543/36551

--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
           <h3>Log in</h3>
           <button type="button" onclick="discordLogin()" id="discordloginbtn">
             Login with Discord</button
-          ><br /><div style="display: none" id="discordlogin">
-          <p>
-            Sign up with Discord
-          </p><br />
-          <label>Username:</label><br />
-          <input id="discordloginname" maxlength="24"><button>
-          Sign up
-          </button>
-          </div>
+          ><br />
+          <div style="display: none" id="discordlogin">
+            <span>Sign up with Discord</p>
+            <br />
+            <label>Username:</label><br />
+            <input id="discordloginname" maxlength="24" /> <button>
+              Go
+            </button>
+          </div><br />
           <label for="loginname">Username:</label><br />
           <input
             id="loginname"
