--- a/index.html
+++ b/index.html
@@ -189,19 +189,18 @@
             >White text</label
           >
         </fieldset>
+        <h3>Log in</h3>
+        <button type="button" onclick="discordLogin()" id="discordloginbtn">
+          Login with Discord</button
+        ><br />
+        <div style="display: none" id="discordlogin">
+          <b>Sign up with Discord</b>
+          <br /><button id="canceldiscordlogin">Cancel</button><br />
+          <label>Choose a username:</label><br />
+          <input id="discordloginname" maxlength="24" /> <button>Go</button>
+        </div>
+        <br />
         <form id="login">
-          <h3>Log in</h3>
-          <button type="button" onclick="discordLogin()" id="discordloginbtn">
-            Login with Discord</button
-          ><br />
-          <div style="display: none" id="discordlogin">
-            <span>Sign up with Discord</p>
-            <br />
-            <label>Username:</label><br />
-            <input id="discordloginname" maxlength="24" /> <button>
-              Go
-            </button>
-          </div><br />
           <label for="loginname">Username:</label><br />
           <input
             id="loginname"
