🏬🐌 Checkpoint ./index.html:51548543/48

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <b>Sign up with Discord</b>
           <br /><button id="canceldiscordlogin">Cancel</button><br />
           <label>Choose a username:</label><br />
-          <input id="discordloginname" maxlength="24" /> <button>Go</button>
+          <input id="discordloginname" maxlength="24" /> <button style="margin-top: 5px;vertical-align: middle;">Go</button>
         </div>
         <br />
         <form id="login">
