🎽🕌 Checkpoint ./public/static/discordlogin.js:51548543/1622 ./index.html:51548543/25

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <br /><button id="canceldiscordlogin">Cancel</button><br />
             <label>Choose a username:</label><br />
             <input id="discordloginname" maxlength="24" />
-            <button style="margin-top: 5px; vertical-align: middle">Go</button>
+            <button style="margin-top: 5px; vertical-align: middle" id="discordchoosename">Go</button>
           </div>
           <br />
         </div>
