--- a/index.html
+++ b/index.html
@@ -486,9 +486,13 @@
           <a href="https://discord.gg/rNAQaF8FDs" target="_blank"
             ><img
               alt="discord"
-              src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg?v=1705245986519"
+              src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
               style="width: 20px; padding-top: 4.85px"
           /></a>
+        </div>
+        <div title="Send Mail" class="infobtn">
+          <img alt="mail"
+               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/picsvg_download.svg">
         </div>
       </div>
     </div>
