🎾🦂 Checkpoint ./.glitch-assets:51974198/411 ./public/index.html:51974198/191

--- a/public/index.html
+++ b/public/index.html
@@ -492,7 +492,7 @@
         </div>
         <div title="Send Mail" class="infobtn">
           <img alt="mail"
-               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/picsvg_download.svg">
+               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png">
         </div>
       </div>
     </div>
