⭐️🚋 Checkpoint ./public/index.html:51974198/35

--- a/public/index.html
+++ b/public/index.html
@@ -491,8 +491,9 @@
           /></a>
         </div>
         <div title="Send Mail" class="infobtn">
+          <a hreff="">
           <img alt="mail"
-               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png">
+               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"></a>
         </div>
       </div>
     </div>
