--- a/public/index.html
+++ b/public/index.html
@@ -491,9 +491,10 @@
           /></a>
         </div>
         <div title="Send Mail" class="infobtn">
-          <a hreff="">
+          <a href="javascript:alert('what are you trying to do? this doesnt even work yet')">
           <img alt="mail"
-               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"></a>
+               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"
+               style="padding-top: 4.85px"></a>
         </div>
       </div>
     </div>
