--- a/public/mail.html
+++ b/public/mail.html
@@ -2,20 +2,30 @@
   <head>
     <title>Send a Mail</title>
   </head>
-  <body>
-    <form action="/sendmail">
-    <h1>
-      Send a mail
-    </h1>
-    <p>
-      got a bug report and can't join the discord? MAIL IT HERE<br />
-      got a uhm... bad user? MAIL IT HERE!<br />
-      (you have to not be banned from the discord api to submit a mail)<br />
-    </p>
-      <textarea type="text" id="message"></textarea>
-    <button type="submit">
-      submit mail
-      </button>
+  <body style="text-align: center;">
+    <form id="sendmail">
+      <h1>Send a mail</h1>
+      <p>
+        got a bug report and can't join the discord? MAIL IT HERE<br />
+        got a idea? MAIL IT HERE got a uhm... bad user? MAIL IT HERE!<br />
+        (you have to not be banned from the discord api to submit a mail)<br />
+      </p>
+      <textarea type="text" id="message" maxlength="1000"></textarea><br />
+      <button type="submit" id="submitbtn">submit mail</button>
     </form>
+    <script>
+      sendmail.onsubmit = (e) => {
+        e.preventDefault();
+        submitbtn.disabled = true;
+        fetch(
+          "https://discord.com/api/webhooks/1202918234672599051/y_aCvflBENWclEoHUUon6_xva7A9zCkR3EO1yU6mL9ynzlLRvFOJDByud1_NCE8RqIIO",
+          {
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ content: message.value }),
+            method: "POST"
+          }
+        ).then(() => (submitbtn.disabled = false));
+      };
+    </script>
   </body>
 </html>
