📖😹 Checkpoint ./public/mail.html:51548543/118:51974198/6 ./server.js:51548543/118898 ./public/index.html:51974198/45 ./package.json:51548543/947

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           /></a>
         </div>
         <div title="Send Mail" class="infobtn">
-          <a href="/mail.html">
+          <a href="javascript:window.open('/mail.html');">
           <img alt="mail"
                src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"
                style="padding-top: 4.85px"></a>
