--- a/public/mail.html
+++ b/public/mail.html
@@ -1,10 +1,10 @@
-<html lang="en">
+*<html lang="en">
   <head>
     <title>Send a Mail</title>
   </head>
   <body style="text-align: center; color: #FFFFFF; background-color: #000000;">
-    <form id="sendmail">
-      <h1>Send a mail</h1>
+    <form id="sendmail" action="/sendmail">
+      <h1>Send a mail (wip)</h1>
       <p>
         got a bug report and can't join the discord? MAIL IT HERE<br />
         got a idea? MAIL IT HERE got a uhm... bad user? MAIL IT HERE!<br />
@@ -13,7 +13,7 @@
       <textarea type="text" id="message" maxlength="1000"></textarea><br /> <br />
       <button type="submit" id="submitbtn">Send Mail</button>
     </form>
-    <script>
+    <script>/*
       sendmail.onsubmit = (e) => {
         e.preventDefault();
         submitbtn.disabled = true;
@@ -25,7 +25,7 @@
             method: "POST"
           }
         ).then(() => (submitbtn.disabled = false));
-      };
+      };*/
     </script>
   </body>
 </html>
