--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
               <input
                 id="inputmember"
                 placeholder="username"
-                type="text"
-                maxlength="24"
+                type="text
+                maxlength=24"
                 minlength="1"
               /><input id="addmemberbtn" value="Add" type="submit" /><br />
             </form>
