--- a/public/mail.html
+++ b/public/mail.html
@@ -6,7 +6,7 @@
     <form id="sendmail">
       <h1>Send a mail</h1>
       <p>
-        got a bug report and can't join the discord? MAIL IT HERE<br />
+        got a bug report and can't <a href="https://discord.gg/fctwf5mSd6">join the discord</a>? MAIL IT HERE<br />
         got a idea? MAIL IT HERE<br />
         got a uhm... bad user? MAIL IT HERE!<br />
       </p>
@@ -25,5 +25,5 @@
         }).then(() => ((submitbtn.disabled = false), (message.value = "")));
       };
     </script>
-  </body</html>>
+  </body>
 </html>
