🐺🏩 Checkpoint ./public/mail.html:51974198/15

--- a/public/mail.html
+++ b/public/mail.html
@@ -15,7 +15,7 @@
       <button type="submit" id="submitbtn">Send Mail</button>
     </form>
     <p>
-      if "urgent", you can include <textarea>&lt;@836988339491962881&gt;</textarea> in the mail to notify Dimka.
+      if urgent or important, you can include <textarea>&lt;@836988339491962881&gt;</textarea> in the mail to notify Dimka.
     </p>
     <script>
       sendmail.onsubmit = (e) => {
