🌉🌎 Checkpoint ./public/maintenance.html:51974198/244

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -52,7 +52,7 @@
     while you wait...<br> or have an message about site finally going up.)<br /><center>
 <video width="700" height="400" controls>
     <source src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/no%20shet%20given.webm"></video></center>
-  </small></center>
+  </small><br /><iframe src="https://discord.com/widget?id=1196101562741825677&theme=dark" width="350" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></center>
   <script>
     var audioCtx = new AudioContext();
     var buffer;
