--- a/public/mail.html
+++ b/public/mail.html
@@ -6,16 +6,26 @@
     <form id="sendmail">
       <h1>Send a mail</h1>
       <p>
-        got a bug report and can't <a href="https://discord.gg/fctwf5mSd6">join the discord</a>? MAIL IT HERE<br />
+        got a bug report and can't
+        <a href="https://discord.gg/fctwf5mSd6">join the discord</a>? MAIL IT
+        HERE<br />
         got a idea/suggestion? MAIL IT HERE<br />
         got a misbehaving user? MAIL IT HERE!<br />
       </p>
-      <textarea type="text" id="message" maxlength="1000"></textarea><br />
+      <textarea
+        type="text"
+        id="message"
+        maxlength="1000"
+        style="width: 600px; height: 300px"
+      ></textarea
+      ><br />
       <br />
       <button type="submit" id="submitbtn">Send Mail</button>
     </form>
     <p>
-      if urgent or important, you can include <input value="<@836988339491962881>" readonly> in the mail to notify Dimka.
+      if urgent or important, you can include
+      <input value="<@836988339491962881>" readonly id="addping" /> in the mail
+      to notify Dimka.
     </p>
     <script>
       sendmail.onsubmit = (e) => {
@@ -26,6 +36,12 @@
           body: message.value,
           method: "POST",
         }).then(() => ((submitbtn.disabled = false), (message.value = "")));
+      };
+      addping.onclick = () => {
+        message.value += "<@836988339491962881>";
+        message.focus();
+        message.selectionStart = message.value.length - 21;
+        message.selectionEnd = message.value.length;
       };
     </script>
   </body>
