--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
     />
-    <link rel="stylesheet" href="/static/textwall.css" />
+    <link rel="stylesheet" href="textwall.cc/static/textwall.css" />
     <script src="/warning.js"></script>
   </head>
   <body>
@@ -465,22 +465,22 @@
           <img alt="home" src="/static/home.svg" />
         </div>
         <div id="copy" title="Copy Selection" class="infobtn">
-          <img id="copyico" alt="copy" src="/static/copy.svg" />
+          <img id="copyico" alt="copy" src="https://textwall.cc/static/copy.svg" />
         </div>
         <div id="paste" title="Paste" class="infobtn">
-          <img id="pasteico" alt="paste" src="/static/paste.svg" />
+          <img id="pasteico" alt="paste" src="https://textwall.cc/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
-          <img alt="color" src="/static/palette.svg" />
+          <img alt="color" src="https://textwall.cc/static/palette.svg" />
         </div>
         <div id="options" title="Options" class="infobtn">
-          <img alt="options" src="/static/settings.svg" />
+          <img alt="options" src="https://textwall.cc/static/settings.svg" />
         </div>
         <div id="theme" title="Theme" class="infobtn">
-          <img id="themeico" alt="theme" src="/static/sun.svg" />
+          <img id="themeico" alt="theme" src="https://textwall.cc/static/sun.svg" />
         </div>
         <div id="goto" title="Teleport" class="infobtn">
-          <img alt="arrow" src="/static/go.svg" />
+          <img alt="arrow" src="https://textwall.cc/static/go.svg" />
         </div>
         <div title="Discord" class="infobtn">
           <a href="https://discord.gg/rNAQaF8FDs" target="_blank"
@@ -500,25 +500,25 @@
     </div>
     <div id="decorations">
       <div class="decoration" id="bold">
-        <img alt="bold" title="bold" src="/static/bold.svg" />
+        <img alt="bold" title="bold" src="https://textwall.cc/static/bold.svg" />
       </div>
       <div class="decoration" id="italic">
-        <img alt="italic" title="italic" src="/static/italic.svg" />
+        <img alt="italic" title="italic" src="https://textwall.cc/static/italic.svg" />
       </div>
       <div class="decoration" id="underline">
-        <img alt="underline" title="underline" src="/static/underline.svg" />
+        <img alt="underline" title="underline" src="https://textwall.cc/static/underline.svg" />
       </div>
       <div class="decoration" id="strikethrough">
         <img
           alt="strikethrough"
           title="strikethrough"
-          src="/static/strikethrough.svg"
+          src="https://textwall.cc/static/strikethrough.svg"
         />
       </div>
     </div>
-    <script src="/static/colors.js"></script>
-    <script src="/static/pep.min.js"></script>
-    <script src="/static/textwall.js"></script>
+    <script src="https://textwall.cc/static/colors.js"></script>
+    <script src="https://textwall.cc/static/pep.min.js"></script>
+    <script src="https://textwall.cc/static/textwall.js"></script>
     <script src="/static/discordlogin.js"></script>
     <script>
       /*if ('serviceWorker' in navigator) {
@@ -527,7 +527,7 @@
 		});
 		}*/
     </script>
-    <script defer>
+    <script>
       console.log("if you're seeing this, the html should have loaded");
     </script>
   </body>
