🏖💡 Checkpoint ./index.html:51974198/41

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
     />
     <link rel="stylesheet" href="textwall.cc/static/textwall.css" />
-    <script src="/warning.js"></script>
+<!--    <script src="/warning.js"></script> -->
   </head>
-  <body>
+  <body><!--
     <script>
       var $buoop = {
         required: { e: -4, f: 111, o: 96, s: 8, c: 111 },
@@ -68,7 +68,7 @@
       } catch (e) {
         window.attachEvent("onload", $buo_f);
       }
-    </script>
+    </script>-->
     <textarea id="clipboard"></textarea>
     <textarea
       id="textarea"
@@ -396,7 +396,7 @@
           <input id="deletewall" type="button" value="Delete wall" />
           <small>(Dangerous!)</small>
         </div>
-        <div>
+        <!--<div>
           <h3>Debug</h3>
           <button onclick="disconnectfromServer()">
             Disconnect from server
@@ -416,7 +416,7 @@
               console.log("Manual ping (debug)");
             }
           </script>
-        </div>
+        </div>-->
         <div id="admin">
           <h3>Admin</h3>
           <p>Sorry, not sure what you're trying to find.</p>
@@ -519,7 +519,7 @@
     <script src="https://textwall.cc/static/colors.js"></script>
     <script src="https://textwall.cc/static/pep.min.js"></script>
     <script src="https://textwall.cc/static/textwall.js"></script>
-    <script src="/static/discordlogin.js"></script>
+    <!-- <script src="/static/discordlogin.js"></script> -->
     <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
