🏹❄️ Checkpoint ./index.html:51974198/7

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
     />
-    <link rel="stylesheet" href="textwall.cc/static/textwall.css" />
+<!--    <link rel="stylesheet" href="textwall.cc/static/textwall.css" />-->
 <!--    <script src="/warning.js"></script> -->
   </head>
   <body><!--
